--- a/sprites.css
+++ b/sprites.css
@@ -1,24 +1,36 @@
 .icon-cart {
   background-image: url(images/spritesheet.png);
-  background-position: 0px -64px;
+  background-position: -69px -64px;
   width: 31px;
   height: 32px;
 }
+.icon-close {
+  background-image: url(images/spritesheet.png);
+  background-position: 0px -64px;
+  width: 37px;
+  height: 37px;
+}
 .icon-down {
   background-image: url(images/spritesheet.png);
-  background-position: -23px -96px;
+  background-position: -137px -101px;
   width: 23px;
   height: 13px;
 }
 .icon-facebook {
   background-image: url(images/spritesheet.png);
-  background-position: -123px -64px;
+  background-position: -58px -101px;
+  width: 28px;
+  height: 28px;
+}
+.icon-facebookw {
+  background-image: url(images/spritesheet.png);
+  background-position: -30px -101px;
   width: 28px;
   height: 28px;
 }
 .icon-google_translate_copyrighted {
   background-image: url(images/spritesheet.png);
-  background-position: -63px -64px;
+  background-position: -100px -64px;
   width: 30px;
   height: 30px;
 }
@@ -28,21 +40,33 @@
   width: 163px;
   height: 64px;
 }
+.icon-menu {
+  background-image: url(images/spritesheet.png);
+  background-position: -86px -101px;
+  width: 28px;
+  height: 20px;
+}
 .icon-note {
   background-image: url(images/spritesheet.png);
-  background-position: -93px -64px;
+  background-position: -130px -64px;
   width: 30px;
   height: 30px;
 }
 .icon-right {
   background-image: url(images/spritesheet.png);
-  background-position: 0px -96px;
+  background-position: -114px -101px;
   width: 23px;
   height: 16px;
 }
 .icon-share {
   background-image: url(images/spritesheet.png);
-  background-position: -31px -64px;
+  background-position: -37px -64px;
   width: 32px;
   height: 32px;
+}
+.icon-transw {
+  background-image: url(images/spritesheet.png);
+  background-position: 0px -101px;
+  width: 30px;
+  height: 30px;
 }
