--- a/scss/bases/_typography.scss
+++ b/scss/bases/_typography.scss
@@ -9,6 +9,9 @@
 .header-type {
 	font-family: 'GothamBold' !important;
 }
+.header-black {
+	font-family: 'GothamBlack' !important;
+}
 
 // SIZES
 // ----------------------------------------------------------------------------
