--- a/scss/components/_menu.top.scss
+++ b/scss/components/_menu.top.scss
@@ -8,7 +8,7 @@
 	padding: rem-calc(0 60);
 	@extend %transition;
 
-	&.hide-canvas {
+	&.hide-canvas:not(.inner-page) {
 		@include translateY(-100%);
 	}
 }
