--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -20,3 +20,10 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'GothamBlack';
+  src: url('fonts/GothamBlack.eot?#iefix') format('embedded-opentype'),  url('fonts/GothamBlack.woff') format('woff'), url('fonts/GothamBlack.ttf')  format('truetype'), url('fonts/GothamBlack.svg#GothamBlack') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
