--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -127,7 +127,7 @@ $include-html-global-classes: $include-html-classes;
 // $info-color: #a0d3e8;
 
 // We use these to control various global styles
- $body-bg: #f3f3f3;
+ $body-bg: #fff;
  $body-font-color: $black;
  $body-font-family: 'Baufra-DemiBold';
 // $body-font-weight: $font-weight-normal;
