--- a/scss/bases/_containers.scss
+++ b/scss/bases/_containers.scss
@@ -1,3 +1,7 @@
+body {
+	overflow-x: hidden;
+}
+
 // BACKGROUNDS
 // ----------------------------------------------------------------------------
 .bg-primary {
