--- a/scss/components/_home.menu.scss
+++ b/scss/components/_home.menu.scss
@@ -23,3 +23,12 @@
 		margin-bottom: rem-calc(30);
 	}
 }
+#jpreBar {
+	position: fixed;
+	z-index: 999;
+	top: 0;
+	left: 0;
+	@extend .small-12;
+	height: rem-calc(3);
+	background-color: $gold;
+}
