--- a/sprites.css
+++ b/sprites.css
@@ -12,33 +12,45 @@
 }
 .icon-down {
   background-image: url(images/spritesheet.png);
-  background-position: -137px -101px;
+  background-position: -38px -131px;
   width: 23px;
   height: 13px;
 }
 .icon-facebook {
   background-image: url(images/spritesheet.png);
-  background-position: -58px -101px;
+  background-position: -30px -101px;
   width: 28px;
   height: 28px;
 }
 .icon-facebookw {
   background-image: url(images/spritesheet.png);
-  background-position: -30px -101px;
+  background-position: -58px -101px;
   width: 28px;
   height: 28px;
 }
 .icon-google_translate_copyrighted {
   background-image: url(images/spritesheet.png);
-  background-position: -100px -64px;
+  background-position: 0px -101px;
   width: 30px;
   height: 30px;
+}
+.icon-left {
+  background-image: url(images/spritesheet.png);
+  background-position: -114px -101px;
+  width: 23px;
+  height: 16px;
 }
 .icon-logo-footer {
   background-image: url(images/spritesheet.png);
   background-position: 0px 0px;
   width: 163px;
   height: 64px;
+}
+.icon-lquote {
+  background-image: url(images/spritesheet.png);
+  background-position: 0px -131px;
+  width: 19px;
+  height: 13px;
 }
 .icon-menu {
   background-image: url(images/spritesheet.png);
@@ -54,9 +66,15 @@
 }
 .icon-right {
   background-image: url(images/spritesheet.png);
-  background-position: -114px -101px;
+  background-position: -137px -101px;
   width: 23px;
   height: 16px;
+}
+.icon-rquote {
+  background-image: url(images/spritesheet.png);
+  background-position: -19px -131px;
+  width: 19px;
+  height: 13px;
 }
 .icon-share {
   background-image: url(images/spritesheet.png);
@@ -66,7 +84,7 @@
 }
 .icon-transw {
   background-image: url(images/spritesheet.png);
-  background-position: 0px -101px;
+  background-position: -100px -64px;
   width: 30px;
   height: 30px;
 }
