--- a/scss/components/_single.blog.scss
+++ b/scss/components/_single.blog.scss
@@ -13,6 +13,35 @@
 	.mask-header {
 		z-index: 9;
 	}
+	&.contact {
+		height: rem-calc(1024);
+		background-image: url('images/bg-contact.png');
+		background-repeat: no-repeat;
+		background-position: top right;
+
+		.mask-header {
+			height: rem-calc(382);
+		}
+
+		p {
+			color: #525252;
+			font-weight: 700;
+			@extend .text-up;
+			margin-bottom: 0;
+			font-family: 'Baufra-Bold';
+			font-size: rem-calc(20);
+			&.email {
+				margin: rem-calc(30 0);
+
+			}
+		}
+	}
+}
+.contact-info {
+	h1 {
+		font-family: 'GothamBlack';
+		color: #fa384f;
+	}
 }
 .post-blockquote {
 	height: rem-calc(188);
@@ -40,6 +69,14 @@
 			@include translateY(rem-calc(10));
 		}
 	}
+	.contact-info {
+		margin-top: rem-calc(500);
+		h1 {
+			font-family: 'GothamBlack';
+			color: #fa384f;
+			font-size: rem-calc(72);
+		}
+	}
 }
 
 @media #{$small-only} {
@@ -49,6 +86,19 @@
 	.post-blockquote {
 		display: none;
 	}
+	#post-header {
+		&.contact {
+			.mask-header {
+				height: rem-calc(300);
+			}
+			p {
+				font-size: rem-calc(16);
+			}
+		}
+	}
+	.contact-info {
+		margin-top: rem-calc(380);
+	}
 }
 
 @media #{$medium-only} {
@@ -57,5 +107,18 @@
 	}
 	.post-blockquote {
 		display: none;
+	}
+	#post-header {
+		&.contact {
+			.mask-header {
+				height: rem-calc(300);
+			}
+			p {
+				font-size: rem-calc(18);
+			}
+		}
+	}
+	.contact-info {
+		margin-top: rem-calc(380);
 	}
 }
