--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -114,7 +114,7 @@ $include-html-global-classes: $include-html-classes;
 // $oil         : #333333;
 // $jet         : #222222;
  $black       : #000000;
- $ocean : #94ceed;
+ $ocean : #cebb90;
  $salmon: #f48c7d;
  $gold: #cebb90;
 
