--- a/scss/components/_home.menu.scss
+++ b/scss/components/_home.menu.scss
@@ -1,26 +1,41 @@
 .logo-home {
-	top: rem-calc(5);
-	left: rem-calc(60);
+	top: 0;
+	left: 0;
 	z-index: 9999;
+	padding: rem-calc(0 20 0 40);
+	background-color: $white;
 	@extend .no-margin;
 	@extend .less-opacity;
 }
 
 #main-menu-home {
-	padding-top: rem-calc(80);
+	padding-top: rem-calc(60);
 	li {
 		@extend .small-12;
 		@extend .left;
 		@extend .less-opacity;
+
+		> ul {
+			@extend .no-margin;
+			a {
+				margin: 0;
+			}
+			li {
+				width: 35%;
+				margin-left: 0;
+				margin-bottom: 10px;
+			}
+		}
 	}
+
 	a  {
 		@extend .d-block;
 		@extend .left;
 		@extend .text-up;
-		@extend .font-medium;
 		@extend .regular-bold;
+		font-size: rem-calc(13);
 
-		margin-bottom: rem-calc(30);
+		margin-bottom: rem-calc(20);
 	}
 }
 #jpreBar {
@@ -31,4 +46,7 @@
 	@extend .small-12;
 	height: rem-calc(3);
 	background-color: $gold;
+}
+.social-canvas {
+	@include filter(invert(100%));
 }
