--- a/scss/components/_single.loja.scss
+++ b/scss/components/_single.loja.scss
@@ -42,6 +42,30 @@ $slide_height : rem-calc(504);
 	padding: rem-calc(30);
 }
 
+.gal-produto {
+	background-size: 100% !important;
+	background-repeat: no-repeat;
+}
+
+#color-paleta {
+	> div {
+		padding: rem-calc(20 16);
+		border: 2px solid #333;
+		border-radius: 6px;
+	}
+	h6 {
+		line-height: 1.4;
+	}
+	li {
+		margin-left: rem-calc(10);
+	}
+	span {
+		width: rem-calc(20);
+		height: rem-calc(20);
+		border-radius: 100%;
+	}
+}
+
 @media #{$small-only} {
 	.nav-prod-gal {
 		height: rem-calc(300);
