--- a/sprites.css
+++ b/sprites.css
@@ -1,6 +1,6 @@
 .icon-cart {
   background-image: url(images/spritesheet.png);
-  background-position: -69px -64px;
+  background-position: -37px -64px;
   width: 31px;
   height: 32px;
 }
@@ -12,31 +12,37 @@
 }
 .icon-down {
   background-image: url(images/spritesheet.png);
-  background-position: -38px -131px;
+  background-position: -121px -131px;
   width: 23px;
   height: 13px;
 }
 .icon-facebook {
   background-image: url(images/spritesheet.png);
-  background-position: -30px -101px;
+  background-position: -114px -101px;
   width: 28px;
   height: 28px;
 }
 .icon-facebookw {
   background-image: url(images/spritesheet.png);
-  background-position: -58px -101px;
+  background-position: -86px -101px;
   width: 28px;
   height: 28px;
 }
 .icon-google_translate_copyrighted {
   background-image: url(images/spritesheet.png);
-  background-position: 0px -101px;
+  background-position: -100px -64px;
   width: 30px;
   height: 30px;
 }
+.icon-instagram {
+  background-image: url(images/spritesheet.png);
+  background-position: -58px -101px;
+  width: 28px;
+  height: 28px;
+}
 .icon-left {
   background-image: url(images/spritesheet.png);
-  background-position: -114px -101px;
+  background-position: -79px -131px;
   width: 23px;
   height: 16px;
 }
@@ -48,13 +54,13 @@
 }
 .icon-lquote {
   background-image: url(images/spritesheet.png);
-  background-position: 0px -131px;
+  background-position: -144px -131px;
   width: 19px;
   height: 13px;
 }
 .icon-menu {
   background-image: url(images/spritesheet.png);
-  background-position: -86px -101px;
+  background-position: -28px -131px;
   width: 28px;
   height: 20px;
 }
@@ -64,27 +70,45 @@
   width: 30px;
   height: 30px;
 }
+.icon-pinterest {
+  background-image: url(images/spritesheet.png);
+  background-position: 0px -131px;
+  width: 28px;
+  height: 28px;
+}
 .icon-right {
   background-image: url(images/spritesheet.png);
-  background-position: -137px -101px;
+  background-position: -56px -131px;
   width: 23px;
   height: 16px;
 }
 .icon-rquote {
   background-image: url(images/spritesheet.png);
-  background-position: -19px -131px;
+  background-position: -102px -131px;
   width: 19px;
   height: 13px;
 }
 .icon-share {
   background-image: url(images/spritesheet.png);
-  background-position: -37px -64px;
+  background-position: -68px -64px;
   width: 32px;
   height: 32px;
 }
 .icon-transw {
   background-image: url(images/spritesheet.png);
-  background-position: -100px -64px;
+  background-position: 0px -101px;
   width: 30px;
   height: 30px;
+}
+.icon-twitter {
+  background-image: url(images/spritesheet.png);
+  background-position: -30px -101px;
+  width: 28px;
+  height: 28px;
+}
+.icon-youtube {
+  background-image: url(images/spritesheet.png);
+  background-position: -142px -101px;
+  width: 20px;
+  height: 24px;
 }
